--- a/views/index.html
+++ b/views/index.html
@@ -318,7 +318,7 @@
 				<div class='portfolio-item games ai' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://tinyurl.com/llxjsqn' target='_blank'>Download</a>
-						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://tinyurl.com/lydncv5' target='_blank'>Watch</a>
+						<a class='portfolio-tab text' ng-show='hovered == 3' href='https://www.youtube.com/watch?v=oKPLoY2NJQ8' target='_blank'>Watch</a>
 						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='http://tinyurl.com/qdxco2t' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/GsmJcCv.png'></img>
