--- a/views/index.html
+++ b/views/index.html
@@ -233,13 +233,13 @@
 				</span><span>Kirkland, WA</span>
 				<p>Software Engineer in Test II / Feb 2013 - Current</p>
 				<p>
-					I'm leading test efforts, expanding and improving our testing and CI platform. Here's what I've done so far:
+					I help lead test efforts, expanding and improving our testing and CI platform by:
 					<ul>
-						<li><p>Made the CI process transparent for devs with improved performance and custom features</p></li>
-						<li><p>Increased the reliability of UI tests with custom utilities, reducing false negatives from approximately 90% to 10%</p></li>
-						<li><p>Scaled UI test coverage across multiple browsers and user cases to consistently catch product regressions</p></li>
-						<li><p>Lead and organized test efforts to unify QA and automation and increase test usage among feature teams</p></li>
-						<li><p>Gave presentations to help team grow. Offered and recieved technical help on a daily basis to encourage a culture of growth and collaboration and become a stronger developer</p></li>
+						<li><p>Making the CI process transparent for devs with improved performance and features</p></li>
+						<li><p>Increasing reliability of UI tests with custom utilities, reducing false negatives by ~80%</p></li>
+						<li><p>Preventing regression with reliable, multi-browser automated core user experiences </p></li>
+						<li><p>Organizing test efforts to unify QA and automation process to be more efficient </p></li>
+						<li><p>Offered and recieved technical help on a daily basis to encourage a culture of growth</p></li>
 					</ul>
 					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
 					<br/><br/>
