Download printable format available

--- a/views/index.html
+++ b/views/index.html
@@ -55,6 +55,7 @@
 	        <li ng-click='scrollToSection("#experience-screen")'><a>Experience</a></li>
 	        <li ng-click='scrollToSection("#portfolio-screen")'><a>Portfolio</a></li>
 	        <li ng-click='scrollToSection("#contact-screen")'><a>Contact</a></li>
+	        <li><a href="../docs/Adam_Estela_Resume.docx">Download</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
