updates to reflect linkedin

--- a/views/index.html
+++ b/views/index.html
@@ -120,8 +120,7 @@
 				<img src="../resources/game-icon.jpg" class="img-responsive">
 			</div>
 			<div id='gamesOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in low level programming (C/C++) which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I ensured complete milestones and product delivery. I built five complete games during my 3.5 years of matriculation and have written tens of thousands of lines of code.  
-				</span>
+				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in C/C++, OOP, implementation of most data structures, Math, and various Algorithms which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I lead the team by improving communication, organizing, unblocking, and ensuring complete milestones and product delivery 100% of the time. I successfully completed 5 games during my 3.5 years of matriculation.
 			</div>
 		</div>
 		<div class='row section'>
@@ -129,7 +128,7 @@
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two automated testers at PaperG, Inc. Initially, my scope of responsibility included building automated UI tests, but I quickly expanded to focus on infrastructure. I've worked on our continuous integration pipeline, set up test frameworks for other devs, written tools for other test automators, and, of course, written tests. I've successfully helped reduce bug turn-around time and false negatives.</span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two test engineers at PaperG, Inc. My initial scope of responsibility only entailed writing automated UI tests, but I quickly expanded to focus on infrastructure, tools, and the overal goal of rasing product quality. I've improved our continuous integration pipeline and performance, set up test frameworks to enable developers, written tools for other test automators to ensure more reliable UI tests and, of course, written tests. I've successfully helped reduce bug turn-around time and false negatives, intelligently increased test coverage with multiple test types across multiple browsers, and helped lead, organize, and unify test efforts to be more effective.</span>
 			</div>
 		</div>
 		<div class='row section'>
@@ -137,7 +136,7 @@
 				<img src="../resources/web-icon.jpg" class="img-responsive">
 			</div>
 			<div id='webOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with more web development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. <!--I have now started contributing to front end development on a professional level.--></span>
+				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. I have since started contributing to front end development on a professional level and continue to actively grow my skills in this area.</span>
 			</div>
 		</div>
 	</div>
@@ -234,12 +233,12 @@
 				</span><span>Kirkland, WA</span>
 				<p>Software Engineer in Test II / Feb 2013 - Current</p>
 				<p>
-					I help lead test efforts, expanding and improving our testing and CI platform by:
+					I help lead and motivate test efforts, expanding and improving our testing and CI platform by:
 					<ul>
-						<li><p>Making the CI process transparent for devs with improved performance and features</p></li>
+						<li><p>Making the CI process transparent for devs with improved performance, tools, and features</p></li>
 						<li><p>Increasing reliability of UI tests with custom utilities, reducing false negatives by ~80%</p></li>
-						<li><p>Preventing regression with reliable, multi-browser automated core user experiences </p></li>
-						<li><p>Organizing test efforts to unify QA and automation process to be more efficient </p></li>
+						<li><p>Preventing regression with reliable, multi-browser automated UI tests and monitoring </p></li>
+						<li><p>Help leading test efforts to raise product quality with intelligent coverage across unit, functional, integration, and automated tests</p></li>
 						<li><p>Offered and recieved technical help on a daily basis to encourage a culture of growth</p></li>
 					</ul>
 					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
