Updates to microsoft job

--- a/views/index.html
+++ b/views/index.html
@@ -128,7 +128,7 @@
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I am one of two test engineers at PaperG, Inc. My initial scope of responsibility only entailed writing automated UI tests, but I quickly expanded to focus on infrastructure, tools, and the overal goal of rasing product quality. I've improved our continuous integration pipeline and performance, set up test frameworks to enable developers, written tools for other test automators to ensure more reliable UI tests and, of course, written tests. I've successfully helped reduce bug turn-around time and false negatives, intelligently increased test coverage with multiple test types across multiple browsers, and helped lead, organize, and unify test efforts to be more effective.</span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working to build a multi-project-scalable, multi-device, multi-product automation framework from the ground up for bleeding edge technology: the Microsoft Hololens. I also work with several teams to test product quality.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. My initial scope of responsibility only entailed writing automated UI tests, but I quickly expanded to focus on infrastructure, tools, and the overal goal of rasing product quality. I improved the continuous integration pipeline and performance, set up test frameworks to enable developers, written tools for other test automators to ensure more reliable UI tests and, of course, written tests. I successfully helped reduce bug turn-around time and false negatives, intelligently increased test coverage with multiple test types across multiple browsers, and helped lead, organize, and unify test efforts to be more effective as well as empower the team with informative presenations.</span></span>
 			</div>
 		</div>
 		<div class='row section'>
@@ -227,11 +227,33 @@
 			</header>
 		</div>
 		<div class='section'>
-			<div id='paperg' class='col-xs-4 col-xs-offset-2 text fadeInLeft'>
+			<div id='microsoft' class='col-xs-4 text'>
+				<span>
+					<a class='text-header' href='http://www.paperg.com/' target='_blank'>Microsoft</a>
+				</span><span>Redmond, WA</span>
+				<p>Software Engineer in Test / Jan 2015 - Current</p>
+				<p>
+					I currently work to build a multi-project-scalable, multi-device, multi-product automation framework from the ground up for bleeding edge technology: the Microsoft Hololens.
+					<ul>
+						<li><p>Leveraging C#, C++, and Java to build automation tools to handle large environments with several products and devices.</p></li>
+						<li><p>Working with teams on multiple projects to provide test coverage</p></li>
+					</ul>
+					<br/><br/>
+					<!-- QUOTE TBD
+					<div style='width:90%; font-size:0.9em;margin-left:5%;border-top:1px solid grey;'>
+						<br/>
+						<span><i>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."</i></span>
+						<br/>
+						<p style='float:right'>-Trevor Haba / SDE PaperG</p>
+					</div>
+					-->
+				</p>
+			</div>
+			<div id='paperg' class='col-xs-4 text'>
 				<span>
 					<a class='text-header' href='http://www.paperg.com/' target='_blank'>PaperG</a>
 				</span><span>Kirkland, WA</span>
-				<p>Software Engineer in Test II / Feb 2013 - Current</p>
+				<p>Software Engineer in Test II / Feb 2014 - Jan 2015</p>
 				<p>
 					I help lead and motivate test efforts, expanding and improving our testing and CI platform by:
 					<ul>
@@ -251,7 +273,7 @@
 					</div>
 				</p>
 			</div>
-			<div id='digipen' class='col-xs-4 text fadeInRight'>
+			<div id='digipen' class='col-xs-4 text'>
 				<span>
 					<a class='text-header' href='http://www.digipenresearch.com/' target='_blank'>DigiPen Institute of Technology</a>
 				</span><span>Redmond, WA</span>
@@ -391,7 +413,7 @@
 			</div>
 		</div>
 		<div class='col-xs-8 col-xs-offset-2 section text-center'>
-			<p style='color:white;letter-spacing:0.2em;' class='text'>All content &copy; 2014 Adam Confe Estela, all rights reserved.</p>
+			<p style='color:white;letter-spacing:0.2em;' class='text'>All content &copy; 2014-2015 Adam Confe Estela, all rights reserved.</p>
 		</div>
 	</div>
 	
