updated links no tinyurl

--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html lang='en' ng-app>
 
 <head>
+	<title>Adam Estela</title>
 	<!-- font -->
 	<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 
@@ -315,47 +316,53 @@
 		</div>
 		<div class='row text-center'>
 			<div class='portfolio-items section'>
+				<!-- Luminosity -->
 				<div class='portfolio-item games ai' ng-mouseenter='showTabs(0)' ng-mouseleave='hideTabs(0)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://tinyurl.com/kohelaw' target='_blank'>Download</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 0' href='http://tinyurl.com/qdxco2t' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
+						<a class='portfolio-tab text' ng-show='hovered == 0' href='http://games.digipen.edu/downloads/Luminosity_setup?id=1170&download=25896#.VXZbdEal_9I' target='_blank'>Download</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 0' href='https://aeprogramming.wordpress.com/games/' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/uNk1eNa.png'></img>
 				</div>
+				<!-- Resume Site -->
 				<div class='portfolio-item web' ng-mouseenter='showTabs(1)' ng-mouseleave='hideTabs(1)'>
 					<div class='portfolio-tabs'>
 						<a class='portfolio-tab text' ng-show='hovered == 1' href='http://adamestelaresume.azurewebsites.net/' target='_blank'>Live</a>
 						<a class='portfolio-tab text' ng-show='hovered == 1' href='https://github.com/aconfee/AdamEstelaResume' target='_blank'>Git</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 1' href='http://tinyurl.com/mk5vkhn' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 1' href='https://aeprogramming.wordpress.com/' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/5G1rniF.png'></img>
 				</div>
+				<!-- Graphics Projects -->
 				<div class='portfolio-item graphics' ng-mouseenter='showTabs(2)' ng-mouseleave='hideTabs(2)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 2' href='http://tinyurl.com/khovsg2' target='_blank'>Watch</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 2' href='http://tinyurl.com/mvlctym' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
+						<a class='portfolio-tab text' ng-show='hovered == 2' href='https://www.youtube.com/user/MrAconfee/videos' target='_blank'>Watch</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 2' href='https://aeprogramming.wordpress.com/graphics/' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/BfX5SeU.png'></img>
 				</div>
+				<!-- Survaillent -->
 				<div class='portfolio-item games ai' ng-mouseenter='showTabs(3)' ng-mouseleave='hideTabs(3)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 3' href='http://tinyurl.com/llxjsqn' target='_blank'>Download</a>
+						<a class='portfolio-tab text' ng-show='hovered == 3' href='https://drive.google.com/file/d/0B_AIogCcMET6YVVaa0F2azZrTVk/view?usp=sharing' target='_blank'>Download</a>
 						<a class='portfolio-tab text' ng-show='hovered == 3' href='https://www.youtube.com/watch?v=oKPLoY2NJQ8' target='_blank'>Watch</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='http://tinyurl.com/qdxco2t' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 3' href='https://aeprogramming.wordpress.com/games/' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/GsmJcCv.png'></img>
 				</div>
+				<!-- AI Class Project -->
 				<div class='portfolio-item ai' ng-mouseenter='showTabs(4)' ng-mouseleave='hideTabs(4)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 4' href='http://tinyurl.com/lrvyps5' target='_blank'>Watch</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 4' href='http://tinyurl.com/pjnwv35' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
+						<a class='portfolio-tab text' ng-show='hovered == 4' href='https://www.youtube.com/watch?v=d_7Cx3_slsg&list=UUlfeZAnjyOWyE3ysVMvWlhQ' target='_blank'>Watch</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 4' href='https://aeprogramming.wordpress.com/artificial-intelligence/' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/lnWdNdd.png'></img>
 				</div>
+				<!-- Wub Wub Racer Magic -->
 				<div class='portfolio-item games' ng-mouseenter='showTabs(5)' ng-mouseleave='hideTabs(5)'>
 					<div class='portfolio-tabs'>
-						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://tinyurl.com/mgu2t7x' target='_blank'>Download</a>
-						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 5' href='http://tinyurl.com/qdxco2t' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
+						<a class='portfolio-tab text' ng-show='hovered == 5' href='http://games.digipen.edu/downloads/WubWubRacerMagic_setup?id=1170&download=26685#.VXZhC0al_9J' target='_blank'>Download</a>
+						<a class='portfolio-tab portfolio-tab-right text' ng-show='hovered == 5' href='https://aeprogramming.wordpress.com/games/' target='_blank'><img class='info-icon' src='../resources/info-icon-plain.png'</img></a>
 					</div>
 					<img class='img-responsive' src='http://i.imgur.com/miKmrPJ.png'></img>
 				</div>
