improved microsoft description

--- a/views/index.html
+++ b/views/index.html
@@ -230,14 +230,14 @@
 		<div class='section'>
 			<div id='microsoft' class='col-xs-4 text'>
 				<span>
-					<a class='text-header' href='http://www.paperg.com/' target='_blank'>Microsoft</a>
+					<a class='text-header' href='http://www.microsoft.com/microsoft-hololens/en-us' target='_blank'>Microsoft</a>
 				</span><span>Redmond, WA</span>
 				<p>Software Engineer in Test / Jan 2015 - Current</p>
 				<p>
-					I currently work to build a multi-project-scalable, multi-device, multi-product automation framework from the ground up for bleeding edge technology: the Microsoft Hololens.
+					I currently work on several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and devices.
 					<ul>
-						<li><p>Leveraging C#, C++, and Java to build automation tools to handle large environments with several products and devices.</p></li>
-						<li><p>Working with teams on multiple projects to provide test coverage</p></li>
+						<li><p>Programming primarily in C# to develop automation tools that facilitate complex environments with several different products and vastly varying device types.</p></li>
+						<li><p>Working side-by-side with developers on several projects to develop test automation tools that provide a scaleable toolset and simple test authoring interface.</p></li>
 					</ul>
 					<br/><br/>
 					<!-- QUOTE TBD
