resume doc update

--- a/views/index.html
+++ b/views/index.html
@@ -237,7 +237,7 @@
 					I currently work on several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and devices.
 					<ul>
 						<li><p>Programming primarily in C# to develop automation tools that facilitate complex environments with several different simultaneously running products and vastly varying device types.</p></li>
-						<li><p>Working side-by-side with developers on several projects to develop test automation tools that provide a scaleable toolset and simple test authoring interface.</p></li>
+						<li><p>Working side-by-side with developers on several projects to develop test automation tools that provide a scalable toolset and simple test authoring interface.</p></li>
 					</ul>
 					<br/><br/>
 					<!-- QUOTE TBD
