--- a/views/index.html
+++ b/views/index.html
@@ -129,7 +129,7 @@
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working to build a multi-project-scalable, multi-device, multi-product automation framework from the ground up for bleeding edge technology: the Microsoft Hololens. I also work with several teams to test product quality.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. focussing on infrastructure and tools with the overal goal of rasing product quality. I improved the continuous integration pipeline and performance, set up a test autoation framework, wrote tools for other test automators to ensure more reliable UI tests and, of course, authored tests. I successfully helped reduce bug turn-around time and false negatives, intelligently increased test coverage with multiple test types across multiple browsers, and helped lead, organize, and unify test efforts to be more effective.</span></span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and vastly varying devices.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. developing infrastructure and tools with the overal goal of rasing product quality. I improved the continuous integration pipeline design, implementation and performance, set up a test autoation framework, wrote tools for other test automation authors to ensure more reliable UI tests and, of course, authored tests. Apart from improving quality technically, I also helped lead, organize, and unify team test efforts to be more effective.</span></span>
 			</div>
 		</div>
 		<div class='row section'>
@@ -232,10 +232,11 @@
 				<span>
 					<a class='text-header' href='http://www.microsoft.com/microsoft-hololens/en-us' target='_blank'>Microsoft</a>
 				</span><span>Redmond, WA</span>
-				<p>Software Engineer in Test / Jan 2015 - Current</p>
+				<p>Software Engineer in Test II / Jan 2015 - Current</p>
 				<p>
 					I currently work on several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and devices.
 					<ul>
+						<li><p>Promoted in 5 months based on merit.</p></li>
 						<li><p>Programming primarily in C# to develop automation tools that facilitate complex environments with several different simultaneously running products and vastly varying device types.</p></li>
 						<li><p>Working side-by-side with developers on several projects to develop test automation tools that provide a scalable toolset and simple test authoring interface.</p></li>
 					</ul>
@@ -258,6 +259,7 @@
 				<p>
 					I help lead and motivate test efforts, expanding and improving our testing and CI platform by:
 					<ul>
+						<li><p>Promoted in 4 months based on merit.</p></li>
 						<li><p>Making the CI process transparent for devs with improved performance, tools, and features</p></li>
 						<li><p>Increasing reliability of UI tests with custom utilities, reducing false negatives by ~80%</p></li>
 						<li><p>Preventing regression with reliable, multi-browser automated UI tests and monitoring </p></li>
