--- a/views/index.html
+++ b/views/index.html
@@ -129,7 +129,7 @@
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and vastly varying devices.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. developing infrastructure and tools with the overal goal of rasing product quality. I improved the continuous integration pipeline design, implementation and performance, set up a test automation framework, wrote tools for other test automation authors to ensure more reliable UI tests and, of course, authored tests. Apart from improving quality technically, I also helped lead, organize, and unify team test efforts to be more effective.</span></span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and vastly varying devices.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. developing infrastructure and tools with the overal goal of rasing product quality. I improved the continuous integration pipeline design, implementation and performance, developed a test automation framework, developed tools for other test automation authors to ensure more reliable UI tests and, of course, authored tests. Apart from improving quality technically, I also helped lead, organize, and unify team test efforts to be more effective.</span></span>
 			</div>
 		</div>
 		<div class='row section'>
@@ -137,7 +137,7 @@
 				<img src="../resources/web-icon.jpg" class="img-responsive">
 			</div>
 			<div id='webOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I fell in love with development oriented tasks. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. I have since started contributing to front end development on a professional level and continue to actively grow my skills in this area.</span>
+				<span class='text-header'>WEB&nbsp;&nbsp;</span><span>While testing at PaperG, I explored web development apart from test and tools. I chased this passion by tirelessly working on solo end-end web applications while receiving professional code reviews. After a couple months, I began contributing to front end development on a professional level, even mentoring and providing assistance to other developers.</span>
 			</div>
 		</div>
 	</div>
