--- a/views/index.html
+++ b/views/index.html
@@ -121,7 +121,7 @@
 				<img src="../resources/game-icon.jpg" class="img-responsive">
 			</div>
 			<div id='gamesOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in C/C++, OOP, implementation of most data structures, Math, and various Algorithms which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I lead the team by improving communication, organizing, unblocking, and ensuring complete milestones and product delivery 100% of the time. I successfully completed 5 games during my 3.5 years of matriculation.
+				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in extensive use of C/C++, OOP, implementation of most data structures, Math, and various Algorithms in such topics as optimization, graphics, AI, and more which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I lead the team by improving communication, organizing, unblocking, and ensuring complete milestones and product delivery 100% of the time. I successfully completed 5 games during my 3.5 years of matriculation.
 			</div>
 		</div>
 		<div class='row section'>
@@ -129,7 +129,7 @@
 				<img src="../resources/test-icon.jpg" class="img-responsive">
 			</div>
 			<div id='testOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and vastly varying devices.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. developing infrastructure and tools with the overal goal of rasing product quality. I improved the continuous integration pipeline design, implementation and performance, developed a test automation framework, developed tools for other test automation authors to ensure more reliable UI tests and, of course, authored tests. Apart from improving quality technically, I also helped lead, organize, and unify team test efforts to be more effective.</span></span>
+				<span class='text-header'>TEST&nbsp;&nbsp;</span><span>I'm currently working with several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and vastly varying devices.<br/><br/>Previously, I was one of two test engineers at PaperG, Inc. developing infrastructure, test coverage, and tools. I improved the continuous integration pipeline design, implementation and performance, developed a test automation framework, developed tools for other test automation authors to ensure more reliable UI tests and, of course, authored tests. Apart from improving quality technically, I also helped lead, organize, and unify team test efforts to be more effective.</span></span>
 			</div>
 		</div>
 		<div class='row section'>
