changes to digipen description

--- a/views/index.html
+++ b/views/index.html
@@ -217,6 +217,8 @@
 				</span><span>Redmond, WA</span>
 				<p>B.S. in Computer Science &amp; Minor in Mathematics </p>
 				<p><b>Graduated:</b> December 13th, 2013</p>
+				<p><b>Tutored:</b> 3D Graphics Implementation, Game Engine Implementation Techniques, English, CS Fundamentals, and Math.</p>
+				<p><b>Interned:<b/> I was chosen among several students to intern in DigiPen's R&D department for my final semester.</p> 
 			</div>
 		</div>
 	</div>
