--- a/views/index.html
+++ b/views/index.html
@@ -217,8 +217,10 @@
 				</span><span>Redmond, WA</span>
 				<p>B.S. in Computer Science &amp; Minor in Mathematics </p>
 				<p><b>Graduated:</b> December 13th, 2013</p>
+				<br/>
 				<p><b>Tutored:</b> 3D Graphics Implementation, Game Engine Implementation Techniques, English, CS Fundamentals, and Math.</p>
-				<p><b>Interned:<b/> I was chosen among several students to intern in DigiPen's R&D department for my final semester.</p> 
+				<p><b>Interned:</b> I was chosen among several students to intern in DigiPen's R&D department for my final semester.</p> 
+				<p>"Adam has been great to work with. I have worked with him on multiple game projects, side projects in our spare time, and tutored with him. He is unbelievably hard working and motivated in everything he does." -David James / SDE Microsoft
 			</div>
 		</div>
 	</div>
@@ -230,7 +232,8 @@
 			</header>
 		</div>
 		<div class='section'>
-			<div id='microsoft' class='col-xs-4 text'>
+			<div id='microsoft' class='col-xs-4 col-xs-offset-1 text'>
+				<img class="img-responsive" src="http://www.omicrono.com/wp-content/uploads/2015/01/nasa-microsoft-hololens-2-1000x527.jpg"></img>
 				<span>
 					<a class='text-header' href='http://www.microsoft.com/microsoft-hololens/en-us' target='_blank'>Microsoft</a>
 				</span><span>Redmond, WA</span>
@@ -253,7 +256,7 @@
 					-->
 				</p>
 			</div>
-			<div id='paperg' class='col-xs-4 text'>
+			<div id='paperg' class='col-xs-4 col-xs-offset-2 text'>
 				<span>
 					<a class='text-header' href='http://www.paperg.com/' target='_blank'>PaperG</a>
 				</span><span>Kirkland, WA</span>
@@ -275,27 +278,6 @@
 						<span><i>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."</i></span>
 						<br/>
 						<p style='float:right'>-Trevor Haba / SDE PaperG</p>
-					</div>
-				</p>
-			</div>
-			<div id='digipen' class='col-xs-4 text'>
-				<span>
-					<a class='text-header' href='http://www.digipenresearch.com/' target='_blank'>DigiPen Institute of Technology</a>
-				</span><span>Redmond, WA</span>
-				<p>Teaching Assistant and Tutor / Jan 2012 - Dec 2013</p>
-				<p>While working towards my degree, I was a TA for:
-					<ul>
-						<li><p>Graphics [3D rendering from scratch]</p></li>
-						<li><p>Game Implementation Techniques [Building a game engine]</p></li>
-						<li><p>English</p></li>
-					</ul>
-					I also served as the academic support tutor for CS, Mathematics, and English where I patiently assisted students through problems, aided in debugging, explained concepts, and offered encouragement. Near the end of my education, I interned in DigiPen's research and development department.
-					<br/><br/>
-					<div style='width:90%; font-size:0.9em;margin-left:5%;border-top:1px solid grey;'>
-						<br/>
-						<span><i>"Adam has been great to work with. I have worked with him on multiple game projects, side projects in our spare time, and tutored with him. He is unbelievably hard working and motivated in everything he does."</i></span>
-						<br/>
-						<p style='float:right'>-David James / SDE Microsoft</p>
 					</div>
 				</p>
 			</div>
