--- a/views/index.html
+++ b/views/index.html
@@ -233,11 +233,12 @@
 		</div>
 		<div class='section'>
 			<div id='microsoft' class='col-xs-4 col-xs-offset-1 text'>
-				<img class="img-responsive" src="http://www.omicrono.com/wp-content/uploads/2015/01/nasa-microsoft-hololens-2-1000x527.jpg"></img>
 				<span>
 					<a class='text-header' href='http://www.microsoft.com/microsoft-hololens/en-us' target='_blank'>Microsoft</a>
 				</span><span>Redmond, WA</span>
 				<p>Software Engineer in Test II / Jan 2015 - Current</p>
+				<img class="img-responsive" class="img-rounded" src="http://www.omicrono.com/wp-content/uploads/2015/01/nasa-microsoft-hololens-2-1000x527.jpg"></img>
+				<br/>
 				<p>
 					I currently work on several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and devices.
 					<ul>
