--- a/views/index.html
+++ b/views/index.html
@@ -237,7 +237,7 @@
 					<a class='text-header' href='http://www.microsoft.com/microsoft-hololens/en-us' target='_blank'>Microsoft</a>
 				</span><span>Redmond, WA</span>
 				<p>Software Engineer in Test II / Jan 2015 - Current</p>
-				<img class="img-responsive" class="img-rounded" src="http://www.omicrono.com/wp-content/uploads/2015/01/nasa-microsoft-hololens-2-1000x527.jpg"></img>
+				<img class="img-responsive img-rounded" src="http://www.omicrono.com/wp-content/uploads/2015/01/nasa-microsoft-hololens-2-1000x527.jpg"></img>
 				<br/>
 				<p>
 					I currently work on several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and devices.
