experience image changes

--- a/views/index.html
+++ b/views/index.html
@@ -237,7 +237,7 @@
 					<a class='text-header' href='http://www.microsoft.com/microsoft-hololens/en-us' target='_blank'>Microsoft</a>
 				</span><span>Redmond, WA</span>
 				<p>Software Engineer in Test II / Jan 2015 - Current</p>
-				<img class="img-responsive img-rounded" src="http://www.omicrono.com/wp-content/uploads/2015/01/nasa-microsoft-hololens-2-1000x527.jpg"></img>
+				<img class="img-responsive img-rounded" src="../resources/onsightImage.jpg"></img>
 				<br/>
 				<p>
 					I currently work on several HoloLens experience teams to develop an automation framework and toolset, from the ground up, that scales across multiple products and devices.
@@ -245,6 +245,7 @@
 						<li><p>Promoted in 5 months based on merit.</p></li>
 						<li><p>Programming primarily in C# to develop automation tools that facilitate complex environments with several different simultaneously running products and vastly varying device types.</p></li>
 						<li><p>Working side-by-side with developers on several projects to develop test automation tools that provide a scalable toolset and simple test authoring interface.</p></li>
+						<li><p>Writing and improving org-wide tools.</p></li>
 					</ul>
 					<br/><br/>
 					<!-- QUOTE TBD
@@ -262,6 +263,8 @@
 					<a class='text-header' href='http://www.paperg.com/' target='_blank'>PaperG</a>
 				</span><span>Kirkland, WA</span>
 				<p>Software Engineer in Test II / Feb 2014 - Jan 2015</p>
+				<img class="img-responsive img-rounded" src="../resources/paperGimage.png"></img>
+				<br/>
 				<p>
 					I help lead and motivate test efforts, expanding and improving our testing and CI platform by:
 					<ul>
