--- a/views/index.html
+++ b/views/index.html
@@ -273,7 +273,7 @@
 						<li><p>Increasing reliability of UI tests with custom utilities, reducing false negatives by ~80%</p></li>
 						<li><p>Preventing regression with reliable, multi-browser automated UI tests and monitoring </p></li>
 						<li><p>Help leading test efforts to raise product quality with intelligent coverage across unit, functional, integration, and automated tests</p></li>
-						<li><p>Offered and recieved technical help on a daily basis to encourage a culture of growth</p></li>
+						<li><p>Offered and received technical help on a daily basis to encourage a culture of growth</p></li>
 					</ul>
 					I quickly grasped Javascript, Java, HTML, and CSS as well as several tools that allowed me to work more effectively. Within a week I was contributing code, and after 4 months, I was promoted. 
 					<br/><br/>
