update reference job titles and remove built by me

--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,6 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <div class="navbar-brand text" style='color:red;letter-spacing:0.1em;position:absolute;'>Built by me!</div>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -89,7 +88,7 @@
 						<P class='quote' style='text-align:left'>"Adam has been great to work with. I have worked with him on multiple game projects, side projects in our spare time, and tutored with him. He is unbelievably hard working and motivated in everything he does."<br/><br/><b style='float:right'>-DAVID JAMES / SDE Microsoft</b></P>
 					</div>
 					<div class='item'>
-						<P class='quote' style='text-align:left'>"I've worked with Adam on two student games and couldn't recommend him more. He's a great programmer and always keeps his mind on the big picture. Both projects were delivered in a completed state and were fun to work on."<br/><br/><b style='float:right'>-JORDAN MAPLES / SDET Microsoft</b></p>
+						<P class='quote' style='text-align:left'>"I've worked with Adam on two student games and couldn't recommend him more. He's a great programmer and always keeps his mind on the big picture. Both projects were delivered in a completed state and were fun to work on."<br/><br/><b style='float:right'>-JORDAN MAPLES / SDE Microsoft</b></p>
 					</div>
 					<div class='item'>
 						<p class='quote' style='text-align:left'>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."<br/><br/><b style='float:right'>-TREVOR HABA / SDE PaperG</b></p>
@@ -281,7 +280,7 @@
 						<br/>
 						<span><i>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."</i></span>
 						<br/>
-						<p style='float:right'>-Trevor Haba / SDE PaperG</p>
+						<p style='float:right'>-Trevor Haba / SDE Amazon</p>
 					</div>
 				</p>
 			</div>
