trevor title changes

--- a/views/index.html
+++ b/views/index.html
@@ -91,7 +91,7 @@
 						<P class='quote' style='text-align:left'>"I've worked with Adam on two student games and couldn't recommend him more. He's a great programmer and always keeps his mind on the big picture. Both projects were delivered in a completed state and were fun to work on."<br/><br/><b style='float:right'>-JORDAN MAPLES / SDE Microsoft</b></p>
 					</div>
 					<div class='item'>
-						<p class='quote' style='text-align:left'>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."<br/><br/><b style='float:right'>-TREVOR HABA / SDE PaperG</b></p>
+						<p class='quote' style='text-align:left'>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."<br/><br/><b style='float:right'>-TREVOR HABA / SDE Amazon</b></p>
 					</div>
 					<div class='item'>
 						<P class='quote' style='text-align:left'>"Adam Estela is a friendly, high-performing team member. I'd enjoy working with him again any time."<br/><br/><b style='float:right'>-ANDREW NACK / Technical Designer Signal Studios</b></p>
@@ -280,7 +280,7 @@
 						<br/>
 						<span><i>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."</i></span>
 						<br/>
-						<p style='float:right'>-Trevor Haba / SDE Amazon</p>
+						<p style='float:right'>-Trevor Haba / SDE PaperG, Inc.</p>
 					</div>
 				</p>
 			</div>
