updated resume doc. updated profile description

--- a/views/index.html
+++ b/views/index.html
@@ -120,7 +120,7 @@
 				<img src="../resources/game-icon.jpg" class="img-responsive">
 			</div>
 			<div id='gamesOverview' class='col-xs-6 col-xs-offset-1 text fadeInRight'>
-				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in extensive use of C/C++, OOP, implementation of most data structures, Math, and various Algorithms in such topics as optimization, graphics, AI, and more which I used to build several game engines from the ground up with teams of four developers. On these teams I not only acted as developer, but producer, where I lead the team by improving communication, organizing, unblocking, and ensuring complete milestones and product delivery 100% of the time. I successfully completed 5 games during my 3.5 years of matriculation.
+				<span class='text-header'>GAMES&nbsp;&nbsp;</span><span>My foundation lies in extensive use of C/C++, OOP, implementation of most data structures, Math, and various Algorithms in such topics as optimization, graphics, AI, and more which I used to build several game engines from scratch with teams of four developers. On these teams I not only acted as a multi-diciplinary developer, but producer, where I lead the team by improving communication, organizing, unblocking, and ensuring complete milestones and product delivery 100% of the time. I successfully completed 5 games during my 3.5 years of matriculation alongside tutoring and a full course load.
 			</div>
 		</div>
 		<div class='row section'>
@@ -280,7 +280,7 @@
 						<br/>
 						<span><i>"Adam Estela is both knowledgeable and eager to learn new things, a rare combination for a programmer. I enjoyed working with him and would highly recommend Adam to anyone who asks."</i></span>
 						<br/>
-						<p style='float:right'>-Trevor Haba / SDE PaperG, Inc.</p>
+						<p style='float:right'>-Trevor Haba / SDE PaperG, Inc.</p> 
 					</div>
 				</p>
 			</div>
